k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prediction-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: prediction-api
  template:
    metadata:
      labels:
        app: prediction-api
    spec:
      containers:
        - name: prediction-api
          image: floreagabriel/weather-api:latest
          ports:
            - containerPort: 8000
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
          readinessProbe:
            httpGet:
              path: /ready
              port: 8000
            initialDelaySeconds: 5
