k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prediction-api
spec:
  selector:
    app: prediction-api
  ports:
    - port: 80
      targetPort: 8000
  type: ClusterIP
